--- a/nosotros.html
+++ b/nosotros.html
@@ -19,8 +19,6 @@
 
     <!-- Theme style -->
     <link rel="stylesheet" href="dist/css/cover.css">
-
-    <title>Agrobime</title>
     
   </head>
   <body class="hold-transition login-page">
@@ -41,8 +39,8 @@
                 <div class="col-md-4 py-2">
                   <div class="h-100 p-1 text-white rounded-3 text-center">
                     <img src="dist/img/jamer.png" alt="logo agrobime" width="70%"/>
-                    <h3>Jamer Asencio</h3>
-                    <p>Especialista Agrobimen aplicación de tecnologías electrónicas para el control y seguimiento de plagas.</p>
+                    <h3>Caleb Ventura</h3>
+                    <p>Especialista Agrobim en el desarrollo de aplicaciónes tecnologícas para el control y seguimiento de plagas</p>
                     <button class="btn btn-outline-light btn-primary" type="button">Agendar Reunión</button>
                   </div>
                 </div>
