Actualizacion para presentacion de PFC 2021-1

--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Agrobime</title>
+    <title>Agro</title>
     <link rel="icon" href="agrobime.ico" />
     <link rel="apple-touch-icon" href="agrobime.png" />
     <link rel="manifest" href="manifest.json" />
@@ -28,9 +28,9 @@
             <div>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
-                <a class="nav-link active" aria-current="page" href="dashboard.html">Dashboard</a>
-                <a class="nav-link" href="login.html">Sign In</a>
-                <a class="nav-link" href="nosotros.html">Nosotros</a>
+                <a class="nav-link active" aria-current="page" href="dashboard.html">Resumen y gráficos</a>
+                <a class="nav-link" href="login.html">Ingresa</a>
+                <a class="nav-link" href="nosotros.html">Nosotros somos</a>
             </nav>
             </div>
         </header>
@@ -171,8 +171,8 @@
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
           <!-- Brand Logo -->
           <a href="../../index3.html" class="brand-link">
-            <img src="agrobime.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-            <span class="brand-text font-weight-light">Agrobime</span>
+            <img src="leaves.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+            <span class="brand-text font-weight-light">Agrotech</span>
           </a>
     
           <!-- Sidebar -->
@@ -183,7 +183,7 @@
                 <img src="dist/img/jamer.png" class="img-circle elevation-2" alt="User Image">
               </div>
               <div class="info">
-                <a href="#" class="d-block">Alessandro Árias</a>
+                <a href="#" class="d-block">Caleb Ventura</a>
               </div>
             </div>
     
