--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Agrobime</title>
+    <title>Agro</title>
     <link rel="icon" href="agrobime.ico" />
     <link rel="apple-touch-icon" href="agrobime.png" />
     <link rel="manifest" href="manifest.json" />
@@ -22,22 +22,23 @@
             <div>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                <a class="nav-link" href="dashboard.html">Dashboard</a>
-                <a class="nav-link" href="login.html">Sign In</a>
-                <a class="nav-link" href="nosotros.html">Nosotros</a>
+                <a class="nav-link" href="dashboard.html">Resumen y gráficos</a>
+                <a class="nav-link" href="login.html">Ingresa</a>
+                <a class="nav-link" href="nosotros.html">Nosotros Somos</a>
             </nav>
             </div>
         </header>
 
         <main class="p-3">
-            <h1>Bienvenidos a</h1>                    
-            <img src="agrobime.png"  alt="logo agrobime" width="75%"/>
-            <p class="py-3">La agricultura es de las actividades más importantes de la humanidad y nuestro reto es potenciarla con nuevas tecnologías. </p>
-            <p>El desarrollo es un derecho de todos.</p>
+            <h1>Bienvenidos</h1>                    
+            <img src="farmer.png"  alt="logo agrobime" />
+            <p class="pt-3">"El desarrollo es un derecho de todos"</p>
+            <p>Somos agricultores, cultivamos nuestros alimentos desde hace miles de años</p>
+            <p>Hoy, con la llegada de las nuevas tecnologías, podemos hacer la revolución que siempre hemos esperado. Una revolución que permita revalorizar nuestro trabajo y nuestros productos.</p>
         </main>
 
         <footer class="mt-auto text-white-50 py-3 ">
-            <p>@iot_dev</p>
+            <p>@kali</p>
         </footer>
       </div>
     </div>
