--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
     <!-- Theme style -->
     <link rel="stylesheet" href="dist/css/cover.css">
 
-    <title>Agrobime</title>
+    <title>Agro</title>
     
   </head>
   <body class="hold-transition login-page">
@@ -36,9 +36,9 @@
             <div>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link" href="index.html">Inicio</a>
-                <a class="nav-link" href="dashboard.html">Dashboard</a>
-                <a class="nav-link active" aria-current="page" href="login.html">Sing In</a>
-                <a class="nav-link" href="nosotros.html">Nosotros</a>
+                <a class="nav-link" href="dashboard.html">Resumen y gráficos</a>
+                <a class="nav-link active" aria-current="page" href="login.html">Ingresa</a>
+                <a class="nav-link" href="nosotros.html">Nosotros Somos</a>
             </nav>
             </div>
         </header>
@@ -47,7 +47,7 @@
     <div class="login-box">
 
         <div class="login-logo">
-          <img src="agrobime.png" alt="logo agrobime" width="30%"/>
+          <img src="leaves.png" alt="logo agrobime" width="30%"/>
         </div>
         <!-- /.login-logo -->
 
