--- a/nosotros.html
+++ b/nosotros.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Agrobime</title>
+    <title>Agro</title>
     <link rel="icon" href="agrobime.ico" />
     <link rel="apple-touch-icon" href="agrobime.png" />
     <link rel="manifest" href="manifest.json" />
@@ -21,9 +21,9 @@
             <div>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link" href="index.html">Inicio</a>
-                <a class="nav-link" href="dashboard.html">Dashboard</a>
-                <a class="nav-link" href="login.html">Sign In</a>
-                <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+                <a class="nav-link" href="dashboard.html">Resumen y gráficos</a>
+                <a class="nav-link" href="login.html">Ingresa</a>
+                <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros somos</a>
             </nav>
             </div>
         </header>
@@ -31,14 +31,14 @@
             <div class="row align-items-md-stretch">
                 <div class="col-md-4 py-2">
                   <div class="h-100 p-1 text-white rounded-3 text-center">
-                    <img src="dist/img/caleb.png" alt="logo agrobime" width="60%"/>
-                    <h3>Caleb Ventura</h3>
-                    <p class="py-2">Especialista Agrobim en el desarrollo de aplicaciónes tecnologícas para el control y seguimiento de plagas</p>
+                    <img src="dist/img/investigador.png" alt="logo agrobime" width="60%"/>
+                    <h3>Alonso Carrera</h3>
+                    <p class="py-2">Especialista Agronomo en el desarrollo de aplicaciónes tecnologícas para el monitoreo, análisis de datos y predicción de resultados</p>
                     <button class="btn btn-outline-light btn-primary" type="button">Agendar Reunión</button>
                   </div>
                 </div>
                 <div class="col-md-8 py-2">
-                  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/IUzYg4wW7-U?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/EcktUCUE8xM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </main>
