cambios importantes en los graficos de ejemplo - faltaria que estos se obtengan de la bas de datos

--- a/nosotros.html
+++ b/nosotros.html
@@ -4,8 +4,8 @@
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Agro</title>
-    <link rel="icon" href="agrobime.ico" />
+    <title>Agro-analisis</title>
+    <link rel="icon" href="leaves.png" />
     <link rel="apple-touch-icon" href="agrobime.png" />
     <link rel="manifest" href="manifest.json" />
     <!-- Bootstrap core CSS -->
@@ -32,8 +32,8 @@
                 <div class="col-md-4 py-2">
                   <div class="h-100 p-1 text-white rounded-3 text-center">
                     <img src="dist/img/investigador.png" alt="logo agrobime" width="60%"/>
-                    <h3>Alonso Carrera</h3>
-                    <p class="py-2">Especialista Agronomo en el desarrollo de aplicaciónes tecnologícas para el monitoreo, análisis de datos y predicción de resultados</p>
+                    <h3>Caleb Ventura</h3>
+                    <p class="py-2">Especialista en el desarrollo de aplicaciónes tecnologícas para el monitoreo, análisis de datos y predicción de resultados</p>
                     <button class="btn btn-outline-light btn-primary" type="button">Agendar Reunión</button>
                   </div>
                 </div>
