--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Agro</title>
-    <link rel="icon" href="agrobime.ico" />
+    <title>Agro-analisis</title>
+    <link rel="icon" href="leaves.png" />
     <link rel="apple-touch-icon" href="agrobime.png" />
     <link rel="manifest" href="manifest.json" />
     <!-- Bootstrap core CSS -->
@@ -32,7 +32,7 @@
         <main class="p-3">
             <h1>Bienvenidos</h1>                    
             <img src="farmer.png"  alt="logo agrobime" />
-            <p class="pt-3">"El desarrollo es un derecho de todos"</p>
+            <p class="pt-3">"El desarrollo y crecimiento económico y social es un derecho de todos"</p>
             <p>Somos agricultores, cultivamos nuestros alimentos desde hace miles de años</p>
             <p>Hoy, con la llegada de las nuevas tecnologías, podemos hacer la revolución que siempre hemos esperado. Una revolución que permita revalorizar nuestro trabajo y nuestros productos.</p>
         </main>
