--- a/dashboard.html
+++ b/dashboard.html
@@ -828,7 +828,7 @@
                   <!-- SCATTER CHART -->
                   <div class="card card-success">
                     <div class="card-header">
-                      <h3 class="card-title">Arándanos y Espárragos</h3>
+                      <h3 class="card-title">Producción vs costo operativo</h3>
     
                       <div class="card-tools">
                         <button type="button" class="btn btn-tool" data-card-widget="collapse">
